<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="6">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_columnSpan="6"
        android:layout_rowWeight="1"
        android:background="@android:color/darker_gray"
        android:padding="@dimen/vew_padding_size"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/result_view_text_size" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="6"
        android:background="?attr/colorButtonNormal"
        android:inputType="text"
        android:padding="@dimen/vew_padding_size"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/input_vew_text_size"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_7"
        style="@style/MyButtonStyle"

        android:text="@string/button_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_8"
        style="@style/MyButtonStyle"
        android:text="@string/button_8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_9"
        style="@style/MyButtonStyle"
        android:text="@string/button_9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_divide"
        style="@style/MyButtonStyle"
        android:text="@string/button_divide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_undo"
        style="@style/MyButtonStyle"
        android:text="@string/button_undo"
        android:textSize="@dimen/undo_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_clear"
        style="@style/MyButtonStyle"
        android:text="@string/button_clear" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_4"
        style="@style/MyButtonStyle"
        android:text="@string/button_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_5"
        style="@style/MyButtonStyle"
        android:text="@string/button_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_6"
        style="@style/MyButtonStyle"
        android:text="@string/button_6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiply"
        style="@style/MyButtonStyle"
        android:text="@string/button_multiply" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_left_bracket"
        style="@style/MyButtonStyle"
        android:text="@string/button_left_bracket" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_right_bracket"
        style="@style/MyButtonStyle"
        android:text="@string/button_right_bracket" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1"
        style="@style/MyButtonStyle"
        android:text="@string/button_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_2"
        style="@style/MyButtonStyle"
        android:text="@string/button_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_3"
        style="@style/MyButtonStyle"
        android:text="@string/button_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        style="@style/MyButtonStyle"
        android:layout_width="0dp"
        android:text="@string/button_minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sqr"
        style="@style/MyButtonStyle"
        android:text="@string/button_sqr" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sqrt"
        style="@style/MyButtonStyle"
        android:text="@string/button_sqrt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_0"
        style="@style/MyButtonStyle"
        android:text="@string/button_0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dot"
        style="@style/MyButtonStyle"
        android:text="@string/button_dot" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_percent"
        style="@style/MyButtonStyle"
        android:text="@string/button_percent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        style="@style/MyButtonStyle"
        android:text="@string/button_plus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equal"
        style="@style/MyButtonStyle"
        android:layout_columnSpan="2"
        android:text="@string/button_equal" />
</GridLayout>